<resources>
    <string name="app_name">CalorieGuide</string>

    <!-- Fragments -->
    <!--Food-->
    <string name="fragment_food_header">Food</string>
    <string name="fragment_edit_food_header">Edit Food</string>
    <string name="fragment_add_food_header">Add Food</string>
    <string name="fragment_food_library_header">Food Library</string>

    <!--Meal-->
    <string name="fragment_meal_header">Meal</string>
    <string name="fragment_edit_meal_header">Edit Meal</string>
    <string name="fragment_add_meal_header">Add Meal</string>
    <string name="fragment_meal_library_header">Meal Library</string>

    <!--Auth-->
    <string name="fragment_registration_header">Registration</string>
    <string name="fragment_login_header">Login</string>

    <!--Other-->
    <string name="fragment_main_header">Main</string>
    <string name="fragment_profile_header">Profile</string>
    <string name="fragment_settings_header">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading</string>
    <string name="food_name">Food name</string>
    <string name="description">Description</string>
    <string name="calories">Calories</string>
    <string name="proteins">Proteins</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="fats">Fats</string>
    <string name="meal_name">Meal name</string>
    <string name="number_of_ingredients">Number of ingredients</string>
    <string name="save">Save</string>
    <string name="set_number">Set number</string>
    <string name="user_name">Name</string>
    <string name="user_surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="add">Add</string>
</resources>