<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:hint="@string/user_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            style="@style/TextInputEditText"
            android:maxLength="@integer/name_length"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:hint="@string/user_surname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSurname"
            style="@style/TextInputEditText"
            android:maxLength="@integer/name_length"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            style="@style/TextInputEditText"
            android:maxLength="@integer/name_length"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            style="@style/TextInputEditText"
            android:inputType="textPassword"
            android:maxLength="20"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:hint="@string/calories">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCalories"
            style="@style/TextInputEditText"
            android:inputType="number"
            android:maxLength="@integer/numbers_length"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:hint="@string/carbohydrates">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCarbs"
            style="@style/TextInputEditText"
            android:inputType="number"
            android:maxLength="@integer/numbers_length"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:hint="@string/proteins">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etProteins"
            style="@style/TextInputEditText"
            android:inputType="number"
            android:maxLength="@integer/numbers_length"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:hint="@string/fats">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFats"
            style="@style/TextInputEditText"
            android:inputType="number"
            android:maxLength="@integer/numbers_length"/>

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>